    + Added option to disable OpenStreetMap address geoip lookups;
    + Added $api_stringify_results config.php option for <PHP81 API backwards compatibility;
    + Added support for newly added widgets to be sortable with jQuery (#4711);
    + Added support for using widget parameters; added recent_logins widget (#4184);

    Security Fixes:
    ----------------------------
    + Upgraded jQuery to 3.7.1;
    + Upgraded bootstrap to 3.4.1;
    + Upgraded jQuery-ui to 1.13.3;
    + Cookies set without Secure attribute;
    + Multiple XSS injections (#4145,#4146,#4147,#4148,#4149.#4150,#4151);
    + HTML DOM XSS injection via filenames when uploading (#4160);
    + Escape loaded database strings by default, stored XSS defense;
    + Increase minimum 2FA secret length to 32 (160bit);

== 1.6.0

    Enhancements, changes:
    ----------------------------
    + Partial php8.3 compatibility;
    + MySQL 5.7.7+ is now required (support for utf8mb4);

    Security Fixes:
    ----------------------------
    + SQL injection in custom field enum/set types;
    + Directory traversal possible in RIPE query;
    + XSS (reflected) in 'bw-calculator-result.php';
    + XSS (reflected) by invalid email address response;
    + XSS (reflected) by /app/tools/subnet-masks/popup.php (#3738);
    + XSS (stored) in user widget settings;
    + XSS and LDAP injection in ad-search-result.php;
    + XSS and LDAP injection in ad-search-group-result.php;
    + Restrict find_full_subnets.php to CLI;
    + Ensure confidentiality of database password;

== 1.5.0

    New features:
    ------------
    + Mark subnet as isPool to allocate network and broadcast addresses;
    + Optionally hide section subnet menus;
    + L2 Domains user permissions;
    + Add scanPingType=="none" option to disable scanning;
    + Custom fields on IP request forms (#2956);
    + Added subnet free space map for each possible subnet mask;
    + Added Vaults (Certificate and password storing);